# serialisation

./: .ghci  serialisation.cabal
src/Data/: Serialisation.hs
src/Data/Serialisation/: Cursor.hs  DecodeResult.hs  Decoder.hs  Encoder.hs  HCursor.hs  History.hs
